ci: fix schedule

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -12,7 +12,7 @@ on:
       - "plugins/**"
       - "tests/**"
   schedule:
-    - cron: 56 3 * * * # Run weekly
+    - cron: 56 3 * * 2 # Run weekly
 
 jobs:
   integration-test:
