--- a/tests/integration/targets/dns_domain_info/defaults/main.yml
+++ b/tests/integration/targets/dns_domain_info/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-dns_domain_name: "{{ vultr_resource_prefix }}-example-ansible.com"
+dns_domain_name: "{{ vultr_resource_prefix }}-t2-vultr.com"
 dns_domain_server_ip: 104.24.16.59
