--- a/tests/integration/targets/dns_record/tasks/main.yml
+++ b/tests/integration/targets/dns_record/tasks/main.yml
@@ -2,6 +2,12 @@
 - block:
     - ansible.builtin.import_tasks: tests.yml
   always:
+    - name: cleanup dns domain
+      vultr.cloud.dns_domain:
+        name: "{{ vultr_dns_domain_name }}"
+        state: absent
+      ignore_errors: true
+
     - ansible.builtin.import_role:
         name: cleanup
         tasks_from: cleanup_dns_domain
