--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,16 +27,17 @@ jobs:
       fail-fast: false
       matrix:
         ansible:
-          - stable-2.9
-          - stable-2.10
           - stable-2.11
           - stable-2.12
           - stable-2.13
-          - devel
         python:
           - 2.7 # required by Ansible see https://github.com/ansible-collections/overview/blob/main/collection_requirements.rst#python-compatibility
           - 3.6 # required by Ansible see https://github.com/ansible-collections/overview/blob/main/collection_requirements.rst#python-compatibility
+          - 3.8
         exclude:
+          - ansible: stable-2.11
+            python: 3.8
+
           - ansible: stable-2.12
             python: 2.7
           - ansible: stable-2.12
@@ -45,11 +46,6 @@ jobs:
           - ansible: stable-2.13
             python: 2.7
           - ansible: stable-2.13
-            python: 3.6
-
-          - ansible: devel
-            python: 2.7
-          - ansible: devel
             python: 3.6
     steps:
       - name: Check out code
