--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,14 +6,16 @@ on:
     types: [created]
 
 jobs:
+  call-workflow-sanity:
+    uses: ./.github/workflows/sanity.yml
+
   deploy:
     runs-on: ubuntu-latest
+    needs: call-workflow-sanity
     defaults:
       run:
         working-directory: ansible_collections/vultr/cloud
     steps:
-      - uses: ./.github/workflows/sanity.yml
-
       - uses: actions/checkout@v3
         with:
           path: ansible_collections/vultr/cloud
