--- a/tests/integration/targets/instance/tasks/present.yml
+++ b/tests/integration/targets/instance/tasks/present.yml
@@ -8,6 +8,10 @@
     label: "{{ instance.label }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
     plan: "{{ instance.plan }}"
+    ddos_protection: "{{ instance.ddos_protection | default(omit) }}"
+    backups: "{{ instance.backups | default(omit) }}"
+    enable_ipv6: "{{ instance.enable_ipv6 | default(omit) }}"
+    tags: "{{ instance.tags | default(omit) }}"
     region: "{{ instance.region }}"
     os: "{{ instance.os | default(omit) }}"
     app: "{{ instance.app | default(omit) }}"
@@ -24,6 +28,10 @@
     label: "{{ instance.label }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
     plan: "{{ instance.plan }}"
+    ddos_protection: "{{ instance.ddos_protection | default(omit) }}"
+    backups: "{{ instance.backups | default(omit) }}"
+    enable_ipv6: "{{ instance.enable_ipv6 | default(omit) }}"
+    tags: "{{ instance.tags | default(omit) }}"
     region: "{{ instance.region }}"
     os: "{{ instance.os | default(omit) }}"
     app: "{{ instance.app | default(omit) }}"
@@ -39,6 +47,10 @@
     label: "{{ instance.label }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
     plan: "{{ instance.plan }}"
+    ddos_protection: "{{ instance.ddos_protection | default(omit) }}"
+    backups: "{{ instance.backups | default(omit) }}"
+    enable_ipv6: "{{ instance.enable_ipv6 | default(omit) }}"
+    tags: "{{ instance.tags | default(omit) }}"
     region: "{{ instance.region }}"
     os: "{{ instance.os | default(omit) }}"
     app: "{{ instance.app | default(omit) }}"
@@ -54,6 +66,10 @@
     label: "{{ instance.label }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
     plan: "{{ instance.plan_update }}"
+    ddos_protection: "{{ instance.ddos_protection_update | default(omit) }}"
+    backups: "{{ instance.backups_update | default(omit) }}"
+    enable_ipv6: "{{ instance.enable_ipv6_update | default(omit) }}"
+    tags: "{{ instance.tags_update | default(omit) }}"
     region: "{{ instance.region }}"
     os: "{{ instance.os | default(omit) }}"
     app: "{{ instance.app | default(omit) }}"
@@ -70,6 +86,10 @@
     label: "{{ instance.label }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
     plan: "{{ instance.plan_update }}"
+    ddos_protection: "{{ instance.ddos_protection_update | default(omit) }}"
+    backups: "{{ instance.backups_update | default(omit) }}"
+    enable_ipv6: "{{ instance.enable_ipv6_update | default(omit) }}"
+    tags: "{{ instance.tags_update | default(omit) }}"
     region: "{{ instance.region }}"
     os: "{{ instance.os | default(omit) }}"
     app: "{{ instance.app | default(omit) }}"
@@ -85,6 +105,10 @@
     label: "{{ instance.label }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
     plan: "{{ instance.plan_update }}"
+    ddos_protection: "{{ instance.ddos_protection_update | default(omit) }}"
+    backups: "{{ instance.backups_update | default(omit) }}"
+    enable_ipv6: "{{ instance.enable_ipv6_update | default(omit) }}"
+    tags: "{{ instance.tags_update | default(omit) }}"
     region: "{{ instance.region }}"
     os: "{{ instance.os | default(omit) }}"
     app: "{{ instance.app | default(omit) }}"
