--- a/tests/integration/targets/instance/tasks/absent.yml
+++ b/tests/integration/targets/instance/tasks/absent.yml
@@ -3,36 +3,36 @@
   ansible.builtin.debug:
     var: instance
 
-- name: test absent instance rule in check mode
+- name: test absent instance in check mode
   vultr.cloud.instance:
     label: "{{ instance.label }}"
     region: "{{ instance.region }}"
     state: absent
   register: result
   check_mode: true
-- name: verify test absent instance rule in check mode
+- name: verify test absent instance in check mode
   ansible.builtin.assert:
     that:
       - result is changed
 
-- name: test absent instance rule
+- name: test absent instance
   vultr.cloud.instance:
     label: "{{ instance.label }}"
     region: "{{ instance.region }}"
     state: absent
   register: result
-- name: verify test absent instance rule
+- name: verify test absent instance
   ansible.builtin.assert:
     that:
       - result is changed
 
-- name: test absent instance rule idempotence
+- name: test absent instance idempotence
   vultr.cloud.instance:
     label: "{{ instance.label }}"
     region: "{{ instance.region }}"
     state: absent
   register: result
-- name: verify test absent instance rule idempotence
+- name: verify test absent instance idempotence
   ansible.builtin.assert:
     that:
       - result is not changed
