--- a/tests/integration/targets/instance/tasks/stop-start.yml
+++ b/tests/integration/targets/instance/tasks/stop-start.yml
@@ -7,9 +7,6 @@
   vultr.cloud.instance:
     label: "{{ instance.label }}"
     region: "{{ instance.region }}"
-    os: "{{ instance.os | default(omit) }}"
-    app: "{{ instance.app | default(omit) }}"
-    image: "{{ instance.image | default(omit) }}"
     state: stopped
   register: result
   check_mode: true
@@ -17,42 +14,36 @@
   ansible.builtin.assert:
     that:
       - result is changed
+      - result.vultr_instance.power_status == "running"
 
 - name: test stop instance
   vultr.cloud.instance:
     label: "{{ instance.label }}"
     region: "{{ instance.region }}"
-    os: "{{ instance.os | default(omit) }}"
-    app: "{{ instance.app | default(omit) }}"
-    image: "{{ instance.image | default(omit) }}"
     state: stopped
   register: result
 - name: verify test stop instance
   ansible.builtin.assert:
     that:
       - result is changed
+      - result.vultr_instance.power_status == "stopped"
 
 - name: test stop instance idempotence
   vultr.cloud.instance:
     label: "{{ instance.label }}"
     region: "{{ instance.region }}"
-    os: "{{ instance.os | default(omit) }}"
-    app: "{{ instance.app | default(omit) }}"
-    image: "{{ instance.image | default(omit) }}"
     state: stopped
   register: result
 - name: verify test stop instance idempotence
   ansible.builtin.assert:
     that:
       - result is not changed
+      - result.vultr_instance.power_status == "stopped"
 
 - name: test start instance in check mode
   vultr.cloud.instance:
     label: "{{ instance.label }}"
     region: "{{ instance.region }}"
-    os: "{{ instance.os | default(omit) }}"
-    app: "{{ instance.app | default(omit) }}"
-    image: "{{ instance.image | default(omit) }}"
     state: started
   register: result
   check_mode: true
@@ -60,31 +51,28 @@
   ansible.builtin.assert:
     that:
       - result is changed
+      - result.vultr_instance.power_status == "stopped"
 
 - name: test start instance
   vultr.cloud.instance:
     label: "{{ instance.label }}"
     region: "{{ instance.region }}"
-    os: "{{ instance.os | default(omit) }}"
-    app: "{{ instance.app | default(omit) }}"
-    image: "{{ instance.image | default(omit) }}"
     state: started
   register: result
 - name: verify test start instance
   ansible.builtin.assert:
     that:
       - result is changed
+      - result.vultr_instance.power_status == "running"
 
 - name: test start instance idempotence
   vultr.cloud.instance:
     label: "{{ instance.label }}"
     region: "{{ instance.region }}"
-    os: "{{ instance.os | default(omit) }}"
-    app: "{{ instance.app | default(omit) }}"
-    image: "{{ instance.image | default(omit) }}"
     state: started
   register: result
 - name: verify test start instance idempotence
   ansible.builtin.assert:
     that:
       - result is not changed
+      - result.vultr_instance.power_status == "running"
