--- a/tests/integration/targets/instance/tasks/present.yml
+++ b/tests/integration/targets/instance/tasks/present.yml
@@ -9,6 +9,7 @@
     hostname: "{{ instance.hostname | default(omit) }}"
     user_data: "{{ instance.user_data | default(omit) }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
+    ssh_keys: "{{ instance.ssh_keys | default(omit) }}"
     plan: "{{ instance.plan }}"
     ddos_protection: "{{ instance.ddos_protection | default(omit) }}"
     backups: "{{ instance.backups | default(omit) }}"
@@ -31,6 +32,7 @@
     hostname: "{{ instance.hostname | default(omit) }}"
     user_data: "{{ instance.user_data | default(omit) }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
+    ssh_keys: "{{ instance.ssh_keys | default(omit) }}"
     plan: "{{ instance.plan }}"
     ddos_protection: "{{ instance.ddos_protection | default(omit) }}"
     backups: "{{ instance.backups | default(omit) }}"
@@ -54,6 +56,7 @@
     hostname: "{{ instance.hostname | default(omit) }}"
     user_data: "{{ instance.user_data | default(omit) }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
+    ssh_keys: "{{ instance.ssh_keys | default(omit) }}"
     plan: "{{ instance.plan }}"
     ddos_protection: "{{ instance.ddos_protection | default(omit) }}"
     backups: "{{ instance.backups | default(omit) }}"
@@ -77,6 +80,7 @@
     hostname: "{{ instance.hostname | default(omit) }}"
     user_data: "{{ instance.user_data_update | default(omit) }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
+    ssh_keys: "{{ instance.ssh_keys | default(omit) }}"
     plan: "{{ instance.plan_update }}"
     ddos_protection: "{{ instance.ddos_protection_update | default(omit) }}"
     backups: "{{ instance.backups_update | default(omit) }}"
@@ -101,6 +105,7 @@
     hostname: "{{ instance.hostname | default(omit) }}"
     user_data: "{{ instance.user_data_update | default(omit) }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
+    ssh_keys: "{{ instance.ssh_keys | default(omit) }}"
     plan: "{{ instance.plan_update }}"
     ddos_protection: "{{ instance.ddos_protection_update | default(omit) }}"
     backups: "{{ instance.backups_update | default(omit) }}"
@@ -124,6 +129,7 @@
     hostname: "{{ instance.hostname | default(omit) }}"
     user_data: "{{ instance.user_data_update | default(omit) }}"
     firewall_group: "{{ vultr_instance_firewall_group }}"
+    ssh_keys: "{{ instance.ssh_keys | default(omit) }}"
     plan: "{{ instance.plan_update }}"
     ddos_protection: "{{ instance.ddos_protection_update | default(omit) }}"
     backups: "{{ instance.backups_update | default(omit) }}"
