--- a/changelogs/fragments/block_storage-live.yml
+++ b/changelogs/fragments/block_storage-live.yml
@@ -1,2 +1,2 @@
-minor_change:
-  - block_storage - the default value for argument ``live`` while attaching a volume changed to a more sensible default ``false``.
+minor_changes:
+  - block_storage - the default value for parameter ``live`` while attaching a volume changed to a more sensible default ``false``.
