--- a/tests/integration/targets/block_storage/tasks/tests.yml
+++ b/tests/integration/targets/block_storage/tasks/tests.yml
@@ -10,6 +10,7 @@
   vultr.cloud.block_storage:
     name: "{{ vultr_block_storage_name }}"
     size_gb: "{{ vultr_block_storage_size }}"
+    block_type: "{{ vultr_block_storage_block_type }}"
     region: "{{ vultr_block_storage_region }}"
   register: result
   check_mode: true
@@ -22,6 +23,7 @@
   vultr.cloud.block_storage:
     label: "{{ vultr_block_storage_name }}"
     size_gb: "{{ vultr_block_storage_size }}"
+    block_type: "{{ vultr_block_storage_block_type }}"
     region: "{{ vultr_block_storage_region }}"
   register: result
 - name: verify test create block storage volume
@@ -36,6 +38,7 @@
   vultr.cloud.block_storage:
     label: "{{ vultr_block_storage_name }}"
     size_gb: "{{ vultr_block_storage_size }}"
+    block_type: "{{ vultr_block_storage_block_type }}"
     region: "{{ vultr_block_storage_region }}"
   register: result
 - name: verify test create block storage volume idempotence
@@ -50,6 +53,7 @@
   vultr.cloud.block_storage:
     label: "{{ vultr_block_storage_name }}"
     size_gb: "{{ vultr_block_storage_size - 1 }}"
+    block_type: "{{ vultr_block_storage_block_type }}"
     region: "{{ vultr_block_storage_region }}"
   register: result
 - name: verify test shrink block storage ignored
@@ -69,6 +73,7 @@
   vultr.cloud.block_storage:
     label: "{{ vultr_block_storage_name }}"
     size_gb: "{{ vultr_block_storage_size_2 }}"
+    block_type: "{{ vultr_block_storage_block_type }}"
     region: "{{ vultr_block_storage_region }}"
   register: result
   check_mode: true
@@ -82,6 +87,7 @@
   vultr.cloud.block_storage:
     label: "{{ vultr_block_storage_name }}"
     size_gb: "{{ vultr_block_storage_size_2 }}"
+    block_type: "{{ vultr_block_storage_block_type }}"
     region: "{{ vultr_block_storage_region }}"
   register: result
 - name: verify test resize block storage volume
@@ -94,6 +100,7 @@
   vultr.cloud.block_storage:
     label: "{{ vultr_block_storage_name }}"
     size_gb: "{{ vultr_block_storage_size_2 }}"
+    block_type: "{{ vultr_block_storage_block_type }}"
     region: "{{ vultr_block_storage_region }}"
   register: result
 - name: verify test resize block storage volume idempotency
@@ -110,6 +117,7 @@
   vultr.cloud.block_storage:
     label: "{{ vultr_block_storage_name }}"
     size_gb: "{{ vultr_block_storage_size }}"
+    block_type: "{{ vultr_block_storage_block_type }}"
     region: "{{ vultr_block_storage_region }}"
   register: result
 - name: verify test shrinking warning block storage volume
