--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -100,3 +100,13 @@ releases:
       name: instance
       namespace: ''
     release_date: '2022-09-09'
+  1.2.0:
+    changes:
+      minor_changes:
+      - block_storage - Added the parameter ``block_type`` to configure block types,
+        default value is ``high_perf``.
+      - dns_record - Removed the default value ``0`` for the optional parameter ``priority``.
+    fragments:
+    - block_type_block_storage.yml
+    - dns_record_prio.yml
+    release_date: '2022-10-14'
